[gd_scene load_steps=5 format=2]

[ext_resource path="res://Src/Powers/LightningPower.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Powers/PotionPower.tscn" type="PackedScene" id=2]
[ext_resource path="res://Src/Powers/SlipperyHandsPower.tscn" type="PackedScene" id=3]
[ext_resource path="res://Src/Powers/Powers.gd" type="Script" id=4]

[node name="Powers" type="Node"]
script = ExtResource( 4 )

[node name="LightningPower" parent="." instance=ExtResource( 1 )]

[node name="PotionPower" parent="." instance=ExtResource( 2 )]

[node name="SlipperyHandsPower" parent="." instance=ExtResource( 3 )]

[connection signal="glory_increment" from="SlipperyHandsPower" to="." method="_on_SlipperyHandsPower_glory_increment"]
